initial work on results modal
